--- a/public/personal_manager.ejs
+++ b/public/personal_manager.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/helpmix.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Места продаж | Cherry Music Bar</title>
+    <title>Сотрудники | Cherry Music Bar</title>
 </head>
 <style>
     .container {
@@ -92,33 +92,36 @@ body {
     <div class="container">
         <div id="error_div"></div>
         <div class="page-header">
-            <h1 class="fw-bold fs-2"> Редактор мест продаж </h1>
+        <h2>Сотрудники</h2>
         </div>
         <table class="table table-striped table-bordered">
             <tbody>
                 <tr>
-                    <td colspan="3"><a class="btn btn-success" href="/admin/pos_manager/pos_edit">Создать группу столов</a></td>
+                    <td colspan="3">
+                        <a class="btn btn-success" href="/admin/personal_manager/personal_editor">Добавить сотрудника</a>
+                    </td>
                 </tr>
-                    <% pos.forEach(pos => { %>
-                        <tr>
-                            <td><%= pos.name %></td>
-                            <td style="width:60px;">
-                                <a href="/admin/pos_manager/pos_edit?pos_id=<%= pos.id%>" class="btn btn-success">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
-                                        <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"></path>
-                                    </svg>
-                                </a>
-                            </td>
-                            <td style="width: 60px;">
-                                <a href="/admin/pos_manager/pos_delete?pos_id=<%= pos.id%>"  class="btn btn-danger">X&nbsp;</a>                               </a>
-                            </td>
-                        </tr>
-                        
-                    <% }); %>
+                <tr>
+                    <th>ФИО</th>
+                    <th>Роль</th>
+                    <th></th>
+                </tr>
+                <% personal.forEach(worker => { %> 
+                    <tr>
+                        <td><%= `${worker.firstname} ${worker.lastname}` %></td>
+                        <td><%= worker.role %></td>
+                        <td style="width:60px;">  
+                            <a href="/admin/personal_manager/personal_editor?worker_id=<%= worker.id %>" class="btn btn-success">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                                    <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"></path>
+                                </svg>
+                            </a>
+                        </td>
+                    </tr>
+                <% }); %>
             </tbody>
         </table>							
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
